# blinker_pyblinker_validation

./: Project_Execution_Flowchart.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tutorial/: 1_read_fif.py  2_basic_usage.py
