[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinker_pyblinker_validation"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{email = "balandongiv@gmail.com", name = "rpb"}]
description = "."
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = [
    "mne",
    "pandas",
    "tqdm",
    "gdown",
    "seaborn",
]

[tool.setuptools.packages.find]
include = ["pyblinker*"]
